2008-07-25  Dan Bernstein  <mitz@apple.com>

        Reviewed by Anders Carlsson.

        * http/tests/misc/acid3.html: Updated test 77 from acidtests.org. Added
        alert()ing the log when the score is less than 100.

2008-07-25  Dan Bernstein  <mitz@apple.com>

        Rubber-stamped by Brady Eidson.

        - add missing pixel results and move the render tree results under the platform directory

        * platform/mac/svg/dom/SVGRectElement: Added.
        * platform/mac/svg/dom/SVGRectElement/rect-modify-rx-expected.checksum: Added.
        * platform/mac/svg/dom/SVGRectElement/rect-modify-rx-expected.png: Added.
        * platform/mac/svg/dom/SVGRectElement/rect-modify-rx-expected.txt: Added.
        * platform/mac/webarchive: Added.
        * platform/mac/webarchive/loading: Added.
        * platform/mac/webarchive/loading/cache-expired-subresource-expected.checksum: Added.
        * platform/mac/webarchive/loading/cache-expired-subresource-expected.png: Added.
        * platform/mac/webarchive/loading/cache-expired-subresource-expected.txt: Added.
        * svg/dom/SVGRectElement/rect-modify-rx-expected.txt: Removed.
        * webarchive/loading/cache-expired-subresource-expected.txt: Removed.

2008-07-25  chris fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin

        <rdar://problem/6084806> AX: REGRESSION: returned line number from TextArea is incorrect

        * accessibility/textarea-insertion-point-line-number-expected.txt: Added.
        * accessibility/textarea-insertion-point-line-number.html: Added.
        * accessibility/textarea-line-for-index-expected.txt: Added.
        * accessibility/textarea-line-for-index.html: Added.

2008-07-25  Jacob Refstrup  <jacob.refstrup@hp.com>

        Reviewed by mitz.
        
        - added test case for float being added in trailing whitespace
          of an already full line (with pre-wrap or after-white-space set).