@@ -1,4 +1,6 @@
-<unknown> - willCacheResponse: called
+http://127.0.0.1:8000/misc/resources/willCacheResponse-success.html - willSendRequest <NSURLRequest http://127.0.0.1:8000/misc/resources/willCacheResponse-success.html> redirectResponse (null)
+http://127.0.0.1:8000/misc/resources/willCacheResponse-success.html - didReceiveResponse <NSURLResponse http://127.0.0.1:8000/misc/resources/willCacheResponse-success.html>
+http://127.0.0.1:8000/misc/resources/willCacheResponse-success.html - willCacheResponse: called
 This tests for the willCacheResponse resource delegate callback as added for radar 5008925.
 The test is only meaningful if you are running it under DumpRenderTree
 
